--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomax_style.css" />
+    <link rel="stylesheet" href="/assets/css/Style.css" />
 </head>
 
 <body>
@@ -140,11 +140,9 @@
                 <h1 class="main-heading">
                     Welcome to Ecomax – Where Every Drop Counts!
                 </h1>
-
             </div>
             <div class="row">
-                <div class="d-none d-xl-block  col-xl-1 "></div>
-                <div class="col-12 about-seciton-text  col-xl-6 ">
+                <div class="col-12 about-seciton-text col-xl-6">
                     <div class="about-description text-start ">
                         <p class="mt-0 mb-0  about-seciton-description text-center text-md-start border-About">
                             At Ecomax, we're not just about lubricant oils; we're about empowering industries, driving
@@ -172,23 +170,22 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-12   pe-0 col-xl-5  ">
-                    <div class="about-image-container h-100 ">
+                <div class="col-12   pe-0 col-xl-6">
+                    <div class="about-image-container h-100 p-1">
                         <img class="img-fluid" src="assets/images/about_page/car.png" alt="about image">
                     </div>
                 </div>
-
             </div>
         </div>
-        <div class="container">
+        <div class="container1">
             <div class="row">
                 <div class="about-hero-subtext  text-center ">
-                    <p>But our dedication doesn't stop there. We are also deeply invested in fostering strong
+                    <p class="p-0">But our dedication doesn't stop there. We are also deeply invested in fostering strong
                         relationships with
                         our customers and partners. By providing personalized service, expert advice, and ongoing
                         support, we strive
                         to be more than just a supplier – we aim to be a trusted ally in your success. </p>
-                    <p class="mb-0 set-margin ">As we look to the future, we remain committed to driving innovation,
+                    <p class="mb-0 set-margin p-0">As we look to the future, we remain committed to driving innovation,
                         sustainability, and
                         customer satisfaction. Whether you're powering a fleet of vehicles, operating heavy machinery,
                         or seeking
@@ -210,24 +207,21 @@
                             <div class="bordericon1 d-flex justify-content-center align-items-center ">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle588.png"
                                     alt="images" />
-
                             </div>
-                            <p class=" text-white">Ecomax Product Features</p>
+                            <p class=" text-white mb-0">Ecomax Product Features</p>
                         </div>
                         <div class="About-title mt-1">
                             <h2 class="m-0">The Feature Of Ecomax Engine <br
-                                    class="d-none d-md-block d-lg-none d-xl-block"> Oil That You Will Benefit From</h2>
+                                 class="d-none d-md-block d-lg-none d-xl-block"> Oil That You Will Benefit From</h2>
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button">
                                 <button class="btn3 d-flex  align-items-center">
-
                                     <span
                                         class="about-btn about-btn-2 d-flex align-items-center justify-content-center">
                                         <i class="fa-solid fa-arrow-up-long"></i>
                                     </span>
                                     <span class="text">View Our Products</span>
-
                                 </button>
                             </div>
                         </div>
@@ -327,11 +321,11 @@
     <!-- End: benefit from -->
     <!-- numeric section start -->
     <section class="after-befor-img numeric">
-        <div class="img-set"><img src="https://ik.imagekit.io/ecomax/assets/images/about_page/Dot_small.png"
+        <div class="img-set"><img src="assets/images/about_page/top_Dots.png"
                 alt="images"></div>
         <div class="container1 ">
             <div class="row">
-                <div class="col-12 p-0 d-flex flex-wrap align-items-center">
+                <div class="col-12 p-0 d-flex main-Global-Excellence  flex-wrap align-items-center">
                     <div class="col-12 cout-m col-xl-6 mb-4">
                         <div class="Global-Excellence-title">
                             <h3>
@@ -340,59 +334,59 @@
                             </h3>
                         </div>
                         <div class="Global-Excellence-text">
-                            <p>Discover the power of Ecomax, a trusted leader in lubricant engine oil<br class="d-none">
+                            <p class="mb-0">Discover the power of Ecomax, a trusted leader in lubricant engine oil
                                 manufacturing
-                                and supply. Our decades-long commitment to excellence <br class="d-none"> and innovation
+                                and supply. Our decades-long commitment to excellence and innovation
                                 has earned the
-                                trust of customers worldwide. From <br class="d-none"> automotive to industrial
+                                trust of customers worldwide. From automotive to industrial
                                 applications, we
-                                deliver tailored solutions <br class="d-none"> designed to optimize performance and
+                                deliver tailored solutions  designed to optimize performance and
                                 ensure the
-                                longevity of <br class="d-none"> machinery. Experience the difference with Ecomax and
+                                longevity of machinery. Experience the difference with Ecomax and
                                 unlock the full
-                                <br class="d-none"> potential of your operations.
+                                 potential of your operations.
                             </p>
                         </div>
                     </div>
                     <div class="col-12 col-xl-6 count-carsd d-flex flex-wrap justify-content-between">
-                        <div class=" count-card after-befor">
-                            <div class="col-12 about-cout justify-content-center flex-wrap">
-                                <div class="cout cout-box d-flex justify-content-center bg-white ">
+                        <div class=" count-card after-befor col-md-6">
+                            <div class="col-12 justify-content-center flex-wrap">
+                                <div class=" cout-box cout_Branche d-flex justify-content-center bg-white ">
                                     <div class="d-flex counter1 justify-content-center align-items-center">
-                                        <div class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
-                                            <h3 class="count count1 percent" data-count="10">0</h3>
-                                            <span class="mt-2">Years of Experience</span>
+                                        <div class="cout-sab cout_of_years counter d-flex justify-content-center align-items-center flex-column ">
+                                            <h3 class="count count1 percent count_number" data-count="10">0</h3>
+                                            <span>Years of Experience</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="cout cout-box d-flex justify-content-center bg-white ">
+                                <div class=" cout-box cout_Branche cout_of_years d-flex justify-content-center bg-white ">
                                     <div class="d-flex counter1 justify-content-center align-items-center">
                                         <div
                                             class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
-                                            <h3 class="count percent " data-count="1000">0</h3>
-                                            <span class="mt-2">Satisfied Customers </span>
+                                            <h3 class="count percent count_number" data-count="1000">0</h3>
+                                            <span>Satisfied Customers </span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class=" count-card befor-befor">
-                            <div class="col-12 about-cout justify-content-center flex-wrap">
-                                <div class="cout cout-box d-flex justify-content-center bg-white ">
+                        <div class=" count-card befor-befor col-md-6 ">
+                            <div class="col-12 justify-content-center flex-wrap">
+                                <div class=" cout-box cout_Branche d-flex justify-content-center bg-white ">
                                     <div class="d-flex counter1 justify-content-center align-items-center">
                                         <div
-                                            class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
-                                            <h3 class="count percent" data-count="10">0</h3>
-                                            <span class="mt-2">Branches </span>
+                                            class="cout-sab cout_of_years counter d-flex justify-content-center align-items-center flex-column ">
+                                            <h3 class="count percent count_number" data-count="10">0</h3>
+                                            <span >Branches </span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="cout cout-box d-flex justify-content-center bg-white ">
+                                <div class=" cout-box cout_Branche d-flex justify-content-center bg-white ">
                                     <div class="d-flex counter1 justify-content-center align-items-center">
                                         <div
-                                            class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
-                                            <h3 class="count count1 percent" data-count="30">0</h3>
-                                            <span class="mt-2">Product Range</span>
+                                            class="cout-sab cout_of_years counter d-flex justify-content-center align-items-center flex-column ">
+                                            <h3 class="count count1 percent count_number" data-count="30">0</h3>
+                                            <span>Product Range</span>
                                         </div>
                                     </div>
                                 </div>
@@ -423,7 +417,7 @@
                                 alt="MR. Mukesh Kalsaria" class="img-fluid">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-8 Kalsaria-title-text">
+                    <div class="col-12 col-md-768-6 col-xl-8 Kalsaria-title-text">
                         <div>
                             <div class="Kalsaria-title">
                                 <h2>MR. Mukesh Kalsaria</h2>
@@ -490,7 +484,7 @@
                 </p>
             </div>
             <div class="contact_detail_container">
-                <div class="row gap-3 justify-content-center ">
+                <div class="row contact_All_detail justify-content-center ">
                     <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
                         <div class="d-flex gap-sm-4 gap-3">
                             <div class="icon_container">
@@ -560,7 +554,7 @@
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap">
                             <div
-                                class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3 ">
+                                class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
@@ -580,7 +574,7 @@
                                     </li>
                                   </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12    p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo1">
                                     <button
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
@@ -621,7 +615,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3   p-0 mb-3 float-left  ">
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-2 col-xl-3   p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
@@ -634,7 +628,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12 offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo2">
                                     <button
                                         class="accordion-button collapsed  m-3 d-flex  justify-content-between col-12"
@@ -692,7 +686,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12    p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo3">
                                     <button
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
@@ -754,6 +748,7 @@
             </div>
         </div>
     </footer>
+  
     <!-- Footer end -->
 
     <script src="https://ik.imagekit.io/ecomax/assets/JS/jquery-3.6.3.min.js"></script>
