--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomax_style.css" />
+    <link rel="stylesheet" href="/assets/css/Style.css" />
 
 </head>
 
@@ -199,7 +199,7 @@
                     <div class=" d-flex  about-sab">
                         <div class="About-text d-flex">
                             <div class="bordericon d-flex justify-content-center align-items-center ">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle58.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 58.png"
                                     alt="images" />
                             </div>
                             <p class="about-title m-0 ">About Us</p>
@@ -244,12 +244,12 @@
                     <div class="col-12 col-xl-6 d-flex flex-column benefit-text ">
                         <div class="About-text d-flex">
                             <div class="bordericon1 d-flex justify-content-center align-items-center ">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle588.png"
+                                <img src="assets/images/home/Rectangle 581.png"
                                     alt="images" />
                             </div>
                             <div class="text-white text-us">
-                                <p class="d-md-none text-white mb-0">About us</p>
-                                <p class="d-none d-md-block text-white">Ecomax Product Features</p>
+                                <p class="d-md-none text-white mb-0 ">About us</p>
+                                <p class="d-none d-md-block text-white mb-0">Ecomax Product Features</p>
                             </div>
                         </div>
                         <div class="About-title mt-1">
@@ -344,7 +344,7 @@
                             <div class="benefit-main">
                                 <div class="benefit-pro ">
                                     <div class=" icon5 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
+                                        <img src="assets/images/home/MicrosoftTeams-image (7).png"
                                             alt="images" />
                                     </div>
                                     <div class="icon-text icon-text1">
@@ -409,7 +409,7 @@
                     <div class="swiper mySwiper">
                         <div class="d-flex flex-wrap col-12">
                             <div class="col-12 Revitalize-title">
-                                <h3>Revitalize Your Ride: <br>Discover Ecomax Engine Oils!</h3>
+                                <h3 class="mb-0">Revitalize Your Ride: <br>Discover Ecomax Engine Oils!</h3>
                             </div>
                             <div class="col-12 d-flex justify-content-between">
                                 <div class="swiper-button-prev swiper-button-prevRevitalize "><i
@@ -423,7 +423,7 @@
                             <div class="swiper-slide   d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card ">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/2T_POWERJASO_fc.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize1.png"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -435,7 +435,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/CI-4_FULLY_SYNTHETIC.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize2.png"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -447,7 +447,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6 col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MAX_4T_API_SL_20W-40.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize3.png"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -459,7 +459,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/GAS_ENGINE_IL_API_SF_20W_50.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize4.png"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -483,7 +483,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/UTTO-OIL-WET-BRAKE-OIL.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize6.png"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -495,7 +495,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/LUBE-SAE-20W40-API.webp"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize7.png"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -542,9 +542,9 @@
                                     cleaner, more efficient future for all.</p>
                             </div>
                             <div class="col">
-                                <div class="accordion p-0" id="accordionExample">
-                                    <div class="accordion-item border-0 p-0 ">
-                                        <h2 class="accordion-header  Vision  " id="headingOne">
+                                <div class="accordion  p-0" id="accordionExample">
+                                    <div class="accordion-item border-0 p-0 Vision">
+                                        <h2 class="accordion-header  Vision" id="headingOne">
                                             <button class="accordion-button d-flex col-12 align-items-center" type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#collapseOne" aria-expanded="true"
                                                 aria-controls="collapseOne">
@@ -564,7 +564,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="accordion-item p-0 border-0 ">
+                                    <div class="accordion-item p-0 border-0 Vision">
                                         <h2 class="accordion-header eadingTwo Vision d-flex justify-content-between align-items-center">
                                             <button class="accordion-button  collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
@@ -697,7 +697,7 @@
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap footer-set">
                             <div
-                                class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3 ">
+                                class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3 p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
@@ -719,7 +719,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo10">
                                     <button
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
@@ -758,7 +758,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3  p-0 mb-3 float-left  ">
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-2 col-xl-3  p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
@@ -770,7 +770,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo2">
                                     <button
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
