--- a/collections/index.html
+++ b/collections/index.html
@@ -16,8 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomax_style.css" />
-
+    <link rel="stylesheet" href="/assets/css/Style.css" />
 </head>
 
 
@@ -112,19 +111,17 @@
                                             <div class="panel1">
                                                 <div class="accordion-body p-0">
                                                     <ul class="dropdown-menu-products-res">
-                                                        <li>
-                                                            <a href="/collections/">AUTOMOTIVE</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="/industrial/">INDUDTRIAL</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
+                                                    <li>
+                                                        <a href="/collections/">AUTOMOTIVE</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="/industrial/">INDUDTRIAL</a>
+                                                     </li>
+                                                </ul>
                                             </div>
                                         </div>
-                                 
+                                    </div>
                                 </li>
-
                                     <li class="m-2">
                                         <a href="/about.html">ABOUT US </a>
                                     </li>
@@ -150,10 +147,10 @@
         <div class="container1">
             <div class="row">
                 <div class="d-flex Lubricants flex-column p-0">
-                    <h1 class="text-center Lubricants-title " id="collection_title">
+                    <h1 class="text-center Lubricants-title m-0" id="collection_title">
                         Ecomax Lubricants: Tailored Solutions for Every Engine
                     </h1>
-                    <p class="text-center Lubricants-text" id="collection_description">Powering Diverse Industries:
+                    <p class="text-center Lubricants-text m-0" id="collection_description">Powering Diverse Industries:
                         Ecomax, your
                         comprehensive
                         provider of lubricant excellence. From automobiles to industrial machinery, our versatile range
@@ -207,7 +204,7 @@
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap">
                             <div
-                                class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3 ">
+                                class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
@@ -228,7 +225,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12 offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo1">
                                     <button
                                         class="accordion-button m-3 d-flex  justify-content-between col-12 collapsed"
@@ -269,7 +266,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 p-0 mb-3 float-left  ">
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-2 col-xl-3 p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
@@ -282,7 +279,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo2">
                                     <button
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
@@ -340,7 +337,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo3">
                                     <button
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
@@ -435,7 +432,7 @@
 
             const collectionThumbHTML = ({ url, img, title }) =>
                 `
-                <div class="col-12 col-md-6  produt col-lg-4">
+                <div class="col-12 col-md-6 produt col-lg-4">
                        <div class="products">
                         <a href="${url}">
                             <div class="products-img">
