--- a/contactus.html
+++ b/contactus.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-  <link rel="stylesheet" href="/assets/css/Ecomax_style.css" />
+  <link rel="stylesheet" href="/assets/css/Style.css" />
   <style>
     #chartdiv {
       width: 100%;
@@ -245,7 +245,7 @@
   </section>
   <!-- Contact Connect Section End -->
 <!-- Contact Form Section Start -->
-  <section class="career_form_section Connect_padding">
+  <section class="career_form_section section_padding">
     <div class="container1">
 
       <div class="row m-0 col-12  align-items-center  p-0">
@@ -333,7 +333,7 @@
           </div>
           <div class="col-md-12 p-0 col-lg-8 ">
             <div class="row text-wrap">
-              <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3 ">
+              <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                 <ul class="list-group footer-hover">
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
@@ -354,7 +354,7 @@
                 </ul>
               </div>
               <div
-                class="accordion-item footer-link d-md-none col-12 offset-xl-1  p-0 float-left mb-3">
+                class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                 <h2 class="accordion-header" id="headingTwo1">
                   <button class="accordion-button  m-3 d-flex  justify-content-between col-12 collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo1" aria-expanded="false" aria-controls="collapseTwo1">
@@ -388,7 +388,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3   p-0 mb-3 float-left  ">
+              <div class="col-12 d-none d-md-block col-sm-3 col-md-2 col-xl-3   p-0 mb-3 float-left  ">
                 <h5 class="mb-4 footer_heading">Company</h5>
                 <ul class="list-group footer-hover">
                   <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a href="about.html"
@@ -401,7 +401,7 @@
                 </ul>
               </div>
               <div
-                class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                 <h2 class="accordion-header" id="headingTwo2">
                   <button class="accordion-button m-3 d-flex  justify-content-between col-12 collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
@@ -449,7 +449,7 @@
                 </ul>
               </div>
               <div
-                class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                class="accordion-item footer-link d-md-none col-12   p-0 float-left mb-3">
                 <h2 class="accordion-header" id="headingTwo3">
                   <button class="accordion-button m-3 d-flex  justify-content-between col-12 collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo3" aria-expanded="false" aria-controls="collapseTwo3">
@@ -505,9 +505,7 @@
 
   <!-- Footer end -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+
   <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
   <!-- Resources -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -701,7 +699,6 @@
     chart.seriesContainer.events.disableType("doublehit");
     chart.chartContainer.wheelable = false;
     chart.seriesContainer.wheelable = false;
-
 } catch (err) {
     console.log(err);
 }
