--- a/products/index.html
+++ b/products/index.html
@@ -21,7 +21,7 @@
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/Ecomax_style.css" />
+    <link rel="stylesheet" href="/assets/css/Style.css" />
 
 </head>
 
@@ -251,7 +251,7 @@
         </div>
     </section>
     <!-- product_details_end -->
-
+    
     <!-- Key Features Start -->
 
     <section class="Key_Features">
@@ -459,7 +459,7 @@
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap">
                             <div
-                                class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 offset-xl-1  p-0 float-left mb-3 ">
+                                class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
@@ -480,7 +480,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12 offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12 p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo1">
                                     <button class="accordion-button collapsed m-3 d-flex  justify-content-between col-12" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo1" aria-expanded="false"
@@ -518,7 +518,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 p-0 mb-3 float-left  ">
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-2 col-xl-3 p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
@@ -531,7 +531,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo2">
                                     <button class="accordion-button collapsed m-3 d-flex  justify-content-between col-12" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo2" aria-expanded="false"
@@ -588,7 +588,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="accordion-item footer-link d-md-none col-12  offset-xl-1  p-0 float-left mb-3">
+                            <div class="accordion-item footer-link d-md-none col-12   p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo3">
                                     <button class="accordion-button m-3 d-flex  justify-content-between col-12 collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo3" aria-expanded="false"
