--- a/contactus.html
+++ b/contactus.html
@@ -192,7 +192,7 @@
 <!-- map Section End -->
 <!-- Contact Connect Section Start  -->
   <section class="section_padding Connect-Section">
-    <div class="page_width p-0 ">
+    <div class="container1 ">
       <div class="heading_container text-center">
         <h2 class="main-heading">
           Connect With Us
@@ -311,7 +311,7 @@
   <!-- Footer start -->
   <footer>
     <div class="footer_inner">
-      <div class="page_width ">
+      <div class="container1">
         <div class="row p-0">
           <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
             <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340"
