--- a/products/index.html
+++ b/products/index.html
@@ -163,7 +163,7 @@
                                 </div>
                             </div>
                             <div class="swiper-button-prev product_details_prev d-none d-md-block">
-                                <div class="d-flex justify-content-center align-items-center">
+                                <div class="d-flex justify-content-center align-items-center ">
                                     <i class="fa-solid fa-arrow-left-long"></i>
                                 </div>
                             </div>
@@ -299,7 +299,7 @@
 
                             <div class="swiper-slide d-flex m-0">
                                 <div class="products">
-                                    <a href="#">
+                                    <a href="https://ecomaxlubricant.com/products/index?s=max-4t-20W-40&c=two-wheeler-engine-oil">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/max-4t-20w-40.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -319,7 +319,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="#">
+                                    <a href="https://ecomaxlubricant.com/products/index?s=action-20w-40-4t&c=two-wheeler-engine-oil">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/action-20w-404t.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -339,7 +339,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="#">
+                                    <a href="https://ecomaxlubricant.com/products/index?s=4t-power-plus-20w-40&c=two-wheeler-engine-oil">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/4t-power-plus-20w-40.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -360,7 +360,7 @@
 
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="#">
+                                    <a href="https://ecomaxlubricant.com/products/index?s=gold-4t-20w-40&c=two-wheeler-engine-oil">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/gold-4t-20w-40.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -380,7 +380,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="#">
+                                    <a href="https://ecomaxlubricant.com/products/index?s=max-4t-20w-50&c=two-wheeler-engine-oil">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/max-4t-20w-50.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -400,7 +400,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="#">
+                                    <a href="https://ecomaxlubricant.com/products/index?s=max-4t-10w-30&c=two-wheeler-engine-oil">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/max-4t10w-30.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
