--- a/collections/index.html
+++ b/collections/index.html
@@ -431,17 +431,17 @@
 
 
             const collectionThumbHTML = ({ url, img, title }) =>
-                `
+            `
                 <div class="col-12 col-md-6 produt col-lg-4">
                        <div class="products">
                         <a href="${url}">
                             <div class="products-img">
-                                <img src="${img}"
+                                <img src="https://ik.imagekit.io/ecomax/${img}"
                                     alt="${title}" class="img-fluid col-12 product_img">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
-                                    <h5>
+                                    <h5 >
                                         ${title}
                                     </h5>
                                     <h5 class="products-icon">
@@ -451,7 +451,9 @@
                             </div>
                         </a>
                         </div>
+                        
                     </div>`;
+                    
             const getThumbURL = (type, slug, collectionSlug = null) => {
                 return "/" + (type == 'all' ? 'collections' : 'products') + "/index.html?s=" + slug + (collectionSlug ? "&c=" + collectionSlug : "");
             }
