--- a/industrial/index.html
+++ b/industrial/index.html
@@ -470,7 +470,7 @@ document.addEventListener("DOMContentLoaded", async () => {
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
-                                    <h5>${collection.products[0].thumb_title}</h5>
+                                    <h5 class="product-title">${collection.products[0].thumb_title}</h5>
                                     <h5 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
                                     </h5>
