--- a/collections/index.html
+++ b/collections/index.html
@@ -436,7 +436,7 @@
                        <div class="products">
                         <a href="${url}">
                             <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/${img}"
+                                <img src="${img}"
                                     alt="${title}" class="img-fluid col-12 product_img">
                             </div>
                             <div class="products-title">
