--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -516,11 +516,11 @@
     </script>
     <script>
 
-        if(window.location.href == "https://ecomaxlubricant.com/industrial/products/index?s=extreme-pressure-gear-lubricant"){
+        // if(window.location.href == "https://ecomaxlubricant.com/industrial/products/index?s=extreme-pressure-gear-lubricant"){
 
-        }else{
-            document.querySelector(".industrial_wh").style.cssText = "width: 300px !important;";
-        }
+        // }else{
+        //     document.querySelector(".industrial_wh").style.cssText = "width: 300px !important;";
+        // }
 
         var swiper = new Swiper(".industrial_swiper", {
             pagination: {
